--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config  webpack/webpack.config.dev.js",
+    "start": "webpack-dev-server --config  webpack/config/webpack.config.dev.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack/webpack.config ",
     "prod": "cross-env NODE_ENV=production webpack-dev-server --config webpack/webpack.config "
   },
@@ -31,6 +31,8 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@babel/runtime-corejs2": "^7.10.1",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
